# CeNTREX-trajectories

./: README.md  mypy.ini  pyproject.toml  setup.py
CeNTREX_trajectories/: __init__.py  beamline_objects.py  data_structures.py  particles.py  propagation.py  propagation_ballistic.py  propagation_ode.py  visualization.py
Examples/: CeNTREX Beamline Bayesian Optimization.ipynb  CeNTREX_beamline.py  test_save_trajectories.ipynb
centrex_trajectories/: __init__.py  beamline_objects.py  common_types.py  data_structures.py  numba_functions.py  polynomials.py  propagation.py  propagation_ballistic.py  propagation_linear.py  propagation_ode.py  propagation_options.py  random_generation.py  utils.py  visualization.py
examples/: CeNTREX EQL Estimate Oskari.ipynb  CeNTREX beamline lens testing.ipynb  CeNTREX lens test extended beamline comsol field diff states.ipynb  CeNTREX lens test extended beamline comsol field.ipynb  CeNTREX lens test extended beamline lens length compensated.ipynb  CeNTREX lens test extended beamline lens offset.ipynb  CeNTREX lens test extended beamline uniform freezing.ipynb  CeNTREX lens test extended beamline vf 5m_s amplitude.ipynb  CeNTREX lens test extended beamline.ipynb  EQL test.ipynb  Electrostatic Quadrupole Lens Test.ipynb  Generate Stark Potential.ipynb  Linear restoring force.ipynb  Original CeNTREX Lens Estimate.ipynb  lens_field_comsol.ipynb  lens_offset_test.ipynb  stark_poly.pkl
tests/: test_propagation_ballistic.py
tmp/: __init__.py  beamline_objects.py  data_structures.py  particles.py  propagation_ode.py  propagation_options.py
(+1 files in other folders)
