[tool.poetry]
name = "centrex-trajectories"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["ograsdijk <o.grasdijk@gmail.com>"]
readme = "README.md"
packages = [{include = "centrex_trajectories"}]
include = ["centrex_trajectories/saved_data/stark_poly.pkl"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
scipy = "^1.9.3"
joblib = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
