[tool.poetry]
name = "centrex-trajectories"
version = "0.3.1"
description = ""
license = "MIT"
authors = ["ograsdijk <o.grasdijk@gmail.com>"]
readme = "README.md"
packages = [{include = "centrex_trajectories"}]
include = ["centrex_trajectories/saved_data/stark_poly.pkl"]

[tool.poetry.dependencies]
python = ">3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"
joblib = "^1.2.0"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true